change width on topNav to 100% rather than 100vw. Fixed overflow

--- a/css/output.css
+++ b/css/output.css
@@ -1,6 +1,3 @@
-* {
-  border: 1px solid pink; }
-
 body {
   margin: 0; }
 
@@ -10,7 +7,7 @@ body {
   background-color: #1f1f1f;
   color: white;
   font-size: 14px;
-  width: 98vw;
+  width: 100%;
   height: 35px;
   margin: 0;
   font-family: inherit;
