--- a/scss/input.scss
+++ b/scss/input.scss
@@ -3,9 +3,9 @@ $color2: #1f1f1f;
 $color3: #454545;
 $color4: #91c1aa;
 
-* {
-  border: 1px solid pink;
-}
+// * {
+//   border: 1px solid pink;
+// }
 
 body {
   margin: 0;
@@ -18,7 +18,7 @@ body {
   color: white;
   // padding: 5px 0px;
   font-size: 14px;
-  width: 98vw;
+  width: 100%;
   height: 35px;
   margin: 0;
   font-family: inherit;
